<resources>
    <string name="app_name">MyPharma</string>
    <string name="WelcomeMessage">Welcome on MyPharma</string>
    <string name="choiceMessage">Select an app mode</string>
    <string name="client">Client</string>
    <string name="professionnal">Pro</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="doNotHaveAccount">Click here to create an account</string>
    <string name="buttonSignup">Sign Up</string>
    <string name="firstName">Firstame</string>
    <string name="lastName">Lastname</string>
    <string name="passwordConf">Confirm password</string>
    <string name="secu">Social security number</string>
    <string name="dob">Date Of Birth (click here) </string>
    <string name="phone">Phone number</string>
    <string name="mdpForgot">Forgot password ?</string>
    <string name="send">Send</string>
    <string name="hw">Hello Word!</string>
    <string name="home">Home</string>
    <string name="location">Location</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="dopsimple">Date of birth</string>
    <string name="socialProf">Social number</string>
    <string name="newinfo">Text here</string>
    <string name="refresh">Refresh</string>
    <string name="confirmButton">Confirm</string>
    <string name="title_activity_maps">Map</string>
    <string name="pharmacy">Pharmacy / drugstore</string>
    <string name="hospital">Hospital / health center</string>
    <string name="pharmacyShow">Pharmacy</string>
    <string name="hospitalShow">Hospital / Health center</string>
    <string name="place_name">Place name</string>
    <string name="place_address">Place address</string>
    <string name="place_hours">Place open hours</string>
    <string name="showOnMap">SHOW ON GOOGLE MAP</string>
    <string name="title_activity_view_direction">Map</string>
    <string name="lastStep">Last step </string>
    <string name="choose">Choose your profile picture</string>
    <string name="logout">Logout</string>
    <string name="emailPharma">Pharmacy email</string>
    <string name="presMana">Prescription manager</string>
    <string name="sendPres">Send a prescription</string>
    <string name="histoPres">Historic of prescriptions</string>
    <string name="postcode">Postcode</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="save">Save</string>
    <string name="pharma_name">Pharmacy name</string>
    <string name="employee_name">Employee name</string>
    <string name="idVerif">Identity verification</string>
    <string name="currentUser">Current user : </string>
    <string name="forgot_pharma">If you have forgotten  your email or password, please contact our service</string>
    <string name="newPharma">Contact our client service to add your pharmacy</string>
    <string name="allowed">User allowed to use this mode</string>
    <string name="user_one">First user</string>
    <string name="user_two">Second user</string>
    <string name="user_three">Third user</string>
    <string name="pharma_select">Than, select a pharmacy</string>
    <string name="picture_select">First, select prescription to send</string>
    <string name="next">Next step</string>
    <string name="pharmaShow">Search</string>
    <string name="name">Name</string>
    <string name="select">Send to this one</string>
    <string name="first">1st (obligatory)</string>
    <string name="optionnal">Optionnal</string>
    <string name="newMessage">New message</string>
    <string name="chatChoose">Select a pharmacy</string>
    <string name="message">Message</string>
    <string name="visual">Visual of last message</string>
    <string name="change">Select another pharmacy</string>
    <string name="urlOrdo">URL</string>
    <string name="header">Emulate NFC Forum Type-4 tag</string>
    <string name="description">This example emulates a type-4 tag with an NDEF record (RTD_TEXT). It uses an aid-filter F0394148148100 for the APDU SELECT command.</string>
    <string name="set_ndef_button">Set NDEF Text</string>
    <!--<string name="action_settings">Settings</string>
    <string name="servicedesc">servicedesc</string>
    <string name="aiddescription">aiddescription</string>-->
    <string name="overview">Overview</string>
    <string name="to">Send to</string>
    <string name="showinfo">Show infos</string>
    <string name="confandsend">Confirm and send</string>
    <string name="sendP">Go to overview</string>
    <string name="myPres">My prescription</string>
    <string name="pick">Pickout a prescription</string>
    <string name="last">My last request</string>
    <string name="myLastPres">My last prescription(s) : </string>
    <string name="click">Click</string>
    <string name="state">Request state : </string>
    <string name="noRequest">No request registered</string>
    <string name="welcome">Welcome on MyPharma</string>
    <string name="partner">Our partner pharmacies</string>
    <string name="contact">About us</string>
    <string name="cancel">Cancel</string>
    <string name="id">ID :</string>
    <string name="todo">To do</string>
    <string name="inprocess">In process</string>
    <string name="nfc_tech">NFC Technology</string>
    <string name="nfc_info">This is your personnal secret nfc card</string>
    <string name="how_to_use">To pickout your prescription, please, put your phone (with this page ON) against the NFC receptor on the box to open it. </string>
    <string name="uses_nfc">This card is only working if your prescription is ready and confirm by the pharmacy. It will be reinitialize after any pickout and is usable only for once.</string>
    <string name="problem">If you have any problem, please, contact our service</string>
    <string name="ourPhone">Phone : 0612345678</string>
    <string name="ourEmail">Email : mypharma_app@outlook.fr</string>
    <string name="treat">Treat this one</string>
    <string name="sheet">Patient sheet</string>
    <string name="age">Age</string>
    <string name="ready">Ready to pick out</string>
    <string name="years">years old</string>
    <string name="openBox">Open box</string>


    <string name="action_settings">Settings</string>
    <string name="activity_into">Reader mode active</string>
    <string name="aiddescription">aiddescription</string>
    <string name="servicedesc">servicedesc</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="disconnect">Disconnect</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
