<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6E6E6E"
    tools:context=".Pro.PrescriptionManager.ClientSheet">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/sheet_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/camera_add" />

        <TextView
            android:id="@+id/sheet_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/firstName"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/sheet_picture"
            app:layout_constraintStart_toStartOf="@+id/sheet_picture"
            app:layout_constraintTop_toBottomOf="@+id/sheet_picture" />

        <TextView
            android:id="@+id/sheet_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/lastName"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/sheet_firstname"
            app:layout_constraintStart_toStartOf="@+id/sheet_firstname"
            app:layout_constraintTop_toBottomOf="@+id/sheet_firstname" />

        <TextView
            android:id="@+id/sheet_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/dob"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sheet_lastname" />

        <TextView
            android:id="@+id/sheet_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/age"
            app:layout_constraintStart_toStartOf="@+id/sheet_dob"
            app:layout_constraintTop_toBottomOf="@+id/sheet_dob" />

        <TextView
            android:id="@+id/sheet_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/phone"
            app:layout_constraintStart_toStartOf="@+id/sheet_age"
            app:layout_constraintTop_toBottomOf="@+id/sheet_age" />

        <TextView
            android:id="@+id/sheet_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxWidth="200dp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="@+id/sheet_phone"
            app:layout_constraintTop_toBottomOf="@+id/sheet_phone" />

        <TextView
            android:id="@+id/sheet_secu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/secu"
            app:layout_constraintEnd_toEndOf="@+id/sheet_secu_tv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/sheet_secu_tv"
            app:layout_constraintTop_toBottomOf="@+id/sheet_secu_tv" />

        <TextView
            android:id="@+id/sheet_secu_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/secu"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/sheet_picture"
            app:layout_constraintStart_toStartOf="@+id/sheet_picture"
            app:layout_constraintTop_toBottomOf="@+id/sheet_email" />

        <TextView
            android:id="@+id/yearsOld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/years"
            app:layout_constraintBottom_toBottomOf="@+id/sheet_age"
            app:layout_constraintStart_toEndOf="@+id/sheet_age"
            app:layout_constraintTop_toTopOf="@+id/sheet_age"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>