<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Client.Maps.ViewPlace">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:layout_centerVertical="true" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/photo"
            android:src="@drawable/places_ic_search"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/place_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/place_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_address"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/place_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_hours"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="5" />

            <Button
                android:id="@+id/btn_show_on_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/showOnMap"
                style="@style/Widget.AppCompat.Button.Colored" />


        </LinearLayout>


    </LinearLayout>



</RelativeLayout>