<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnForgot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6E6E6E"
    tools:context=".Pro.ProfileManager.LoginProActivity">


    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/imageViewPro"
        android:layout_width="103dp"
        android:layout_height="103dp"
        android:layout_marginTop="32dp"
        app:civ_border_width="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/my_pharma_pro" />

    <Button
        android:id="@+id/validateButtonLoginPro"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_round"
        android:text="@string/confirmButton"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLoginPro" />

    <EditText
        android:id="@+id/passwordLoginPro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLoginPro" />

    <EditText
        android:id="@+id/emailLoginPro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="@string/emailPharma"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPro" />

    <TextView
        android:id="@+id/forgotEmailPassPharma"
        android:layout_width="296dp"
        android:layout_height="56dp"
        android:layout_marginBottom="52dp"
        android:gravity="center"
        android:text="@string/forgot_pharma"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPharma" />

    <TextView
        android:id="@+id/newPharma"
        android:layout_width="319dp"
        android:layout_height="57dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/newPharma"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/validateButtonLoginPro" />

</androidx.constraintlayout.widget.ConstraintLayout>