<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6E6E6E"
    tools:context=".Pro.ProfileManager.VerificationIdentityPro">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/imageViewPro2"
        android:layout_width="103dp"
        android:layout_height="103dp"
        android:layout_marginTop="30dp"
        app:civ_border_width="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/my_pharma_pro" />

    <EditText
        android:id="@+id/employeeConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/employee_name"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pharmaConfirm" />

    <EditText
        android:id="@+id/pharmaConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:hint="@string/pharma_name"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_verif_tv" />

    <Button
        android:id="@+id/buttonConfirmVerif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#133993"
        android:text="@string/confirmButton"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageViewPro2"
        app:layout_constraintStart_toStartOf="@+id/imageViewPro2"
        app:layout_constraintTop_toBottomOf="@+id/employeeConfirm" />

    <TextView
        android:id="@+id/id_verif_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/idVerif"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageViewPro2"
        app:layout_constraintStart_toStartOf="@+id/imageViewPro2"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPro2" />


</androidx.constraintlayout.widget.ConstraintLayout>